--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/index.css">
   <script src="./js/app.js"></script>
   <title>Document</title>
 </head>
 <body>
-    <h1>{{ name }} + {{ title }}</h1>
-</body>
-</html>
+  <header>
+    <a href="/">Home</a>
+    <a href="/about">About</a>
+    <a href="/help">Help</a>
+  </header>
